# Fractals

./: README.md
MandelbrotFractal/: CMakeLists.txt  main.cpp
MandelbrotFractalCUDA/: fractal.cu  main  main.c  test  test.c
MandelbrotFractalCUDA/pureCUDA/: Output11  Output15  Output22  Output23  Output25  Output26  Output4  Output5  Output6  Output8
MandelbrotFractalCUDA/thrustCUDA/: Output1  Output10  Output12  Output13  Output14  Output16  Output17  Output18  Output19  Output2  Output20  Output21  Output24  Output3  Output7  Output9
